# higgsfield-memory-service

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD_SPEC.md  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  TASK.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
fixtures/: conversations.json  probes.json
scripts/: smoke.sh  test_persistence.sh
src/memory_service/: config.py  main.py
src/memory_service/api/: deps.py  middleware.py  routes_admin.py  routes_memories.py  routes_recall.py  routes_search.py  routes_turns.py
src/memory_service/db/: pool.py
src/memory_service/db/migrations/: 001_init.sql
src/memory_service/embedding/: client.py
src/memory_service/extraction/: llm_extractor.py  models.py  rule_extractor.py  service.py  taxonomy.py
src/memory_service/llm/: client.py
src/memory_service/repo/: memory_repo.py  turn_repo.py
src/memory_service/schemas/: __init__.py  memories.py  recall.py  search.py  turns.py
src/memory_service/services/: assembler.py  fusion.py  query_analyzer.py  recall.py  reconciler.py  retrievers.py  search.py
src/memory_service/util/: logging.py  text.py  tokens.py
tests/: conftest.py
tests/contract/: test_arc_surfacing.py  test_arc_tier2.py  test_endpoints_shape.py  test_health.py  test_multi_hop.py  test_payload_size.py  test_relevance_gate.py  test_supersession.py
tests/quality/: test_extraction_quality.py  test_recall_quality.py
