[project]
name = "memory-service"
version = "0.12.2"
description = "A memory service for AI agents — ingests turns, extracts structured memories, answers recall queries."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "tiktoken>=0.8",
    "openai>=1.54",
    "tenacity>=9.0",
    "python-json-logger>=2.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires a live database (postgres+pgvector)",
    "quality: self-eval quality fixture",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
